# root

./: .gitignore  .pre-commit-config.yaml  justfile  package-lock.json  pyproject.toml
src/api/: models.py  permissions.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_snippet_highlighted_snippet_owner.py
src/base/: blocks.py  models.py
src/base/migrations/: 0001_initial.py  0002_footertext.py  0003_formpage_formfield.py
src/base/templatetags/: navigation_tags.py
src/blog/: models.py
src/blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0004_author.py  0005_blogpage_authors.py  0006_blogpagetag_blogpage_tags.py  0007_blogtagindexpage.py
src/blog/templates/blog/: blog_index_page.html  blog_page.html  blog_tag_index_page.html
src/home/: models.py
src/home/migrations/: 0003_homepage_body.py  0004_homepage_hero_cta_homepage_hero_cta_link_and_more.py
src/home/templates/home/: home_page.html
src/mysite/: urls.py
src/mysite/settings/: base.py  dev.py  production.py
src/mysite/static/css/: input.css  style.css
src/mysite/templates/: base.html
src/mysite/templates/includes/: header.html
src/portfolio/: blocks.py
src/portfolio/migrations/: 0001_initial.py  0002_alter_portfoliopage_body.py
src/portfolio/templates/portfolio/: portfolio_page.html
src/search/: views.py
src/search/templates/search/: search.html
